[package]
name = "schema-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
log = "0.4.22"
fern = "0.6.2"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs"] }
lazy_static = "1.5.0"
ctrlc = "3.4.4"
serde_json = "1.0.122"
serde = "1.0.204"
axum = { version = "0.7.5", features = ["macros"] }
validify = "1.4.0"
axum-valid = {version = "0.19.0", features = ["basic","validify"]}
tower-http = { version = "0.5.2", features = ["cors","compression-gzip"] }
chrono = "0.4.38"
reqwest = "0.12.5"
sqlx = { version = "0.8.0", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"] }
clokwerk = "0.4.0"
octocrab = "0.39.0"
meilisearch-sdk = "0.27.1"
uuid = {version = "1.10.0",features = ["v4","serde"]}
time = "0.3.36"
itertools = "0.13.0"